# orchestra

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.yml  orchctl  pyproject.toml
.claude/commands/: arch-to-tasks.md  orcui.md
agents/backend/: agent.json  main.py  prompt.md
agents/claude_code/: main.py
agents/frontend/: agent.json  main.py  prompt.md
agents/planner/: main.py  plan_utils.py
agents/qa/: agent.json  main.py  prompt.md
agents/root/: main.py
agents/shared/: README.md  llm.py  loop.py
agents/tests/: test_claude_code_main.py  test_frontend_agent.py  test_loop.py  test_qa_agent.py
cli/: README.md  main.py
docs/: auction-store-architecture.md  demo-diary-walkthrough.md  orchestra-overview.md  snake-infinite-world.md
docs/adr/: ADR-001-git-artifact-plane.md  ADR-002-postgres-control-plane.md  ADR-003-gateway-mediated-side-effects.md  ADR-004-event-sourced-orchestrator-state.md  ADR-005-gateway-phase1-sandbox.md  ADR-006-capability-tokens.md  ADR-007-observability.md  ADR-008-risk-tiers.md  ADR-009-adaptive-orchestration.md
docs/design/: README.md  agent-context-protocol.md  orchestrator-mvp-v0.2.md  phase1-retro.md  phase2-retro.md
docs/guide/: README.md  agents.md  api-reference.md  cli-reference.md  configuration.md  memory.md  overview.md  quickstart.md  task-lifecycle.md  validators.md
gateway/gateway/: README.md  app.py  audit.py  permissions.py  token.py
gateway/tests/: conftest.py  test_gateway.py
infra/: README.md  alembic.ini  env.py  prometheus.yml
orchestrator/orchestrator/: README.md  api.py  context_packager.py  dag.py  db.py  dispatcher.py  (+8 more)
permissions/: policy.yaml  validators.yaml
schemas/: agent_identity.schema.json  capability.schema.json  event.schema.json  models.py  run_record.schema.json  task.schema.json
scripts/: demo.sh  demo_v2.sh  setup.sh
(+35 files in other folders)
