[project]
name = "orchestra"
version = "0.1.0"
description = "Human-centric multi-agent orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.scripts]
orchctl = "cli.main:app"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["orchestrator/tests", "gateway/tests", "agents/tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
